--- a/cinema/src/main/resources/application.properties
+++ b/cinema/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/cinema
-spring.datasource.username=YohannM
-spring.datasource.password=Root
+spring.datasource.username=admin
+spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
