--- a/angular/cinema/package.json
+++ b/angular/cinema/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~12.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^5.0.1",
+    "leaflet": "^1.7.1",
+    "leaflet-routing-machine": "^3.2.12",
     "rxjs": "^7.1.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -32,6 +34,7 @@
     "@angular/cli": "^12.0.1",
     "@angular/compiler-cli": "~12.0.0",
     "@types/jasmine": "~3.6.0",
+    "@types/leaflet": "^1.7.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
