--- a/angular/cinema/package.json
+++ b/angular/cinema/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~12.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^5.0.1",
+    "bootstrap-css": "^4.0.0-alpha.5",
     "leaflet": "^1.7.1",
     "leaflet-routing-machine": "^3.2.12",
     "rxjs": "^7.1.0",
