--- a/angular/cinema/package.json
+++ b/angular/cinema/package.json
@@ -21,12 +21,9 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
-    "bootstrap": "^5.0.1",
-    "bootstrap-css": "^4.0.0-alpha.5",
-    "leaflet": "^1.7.1",
-    "leaflet-routing-machine": "^3.2.12",
-    "rxjs": "^7.1.0",
+    "ajv": "^6.12.6",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
