--- a/cinema/src/main/resources/application.properties
+++ b/cinema/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cinema
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql: true
+spring.datasource.username=admin
+spring.datasource.password=root
